# nvalidator

./: Cargo.toml  README.md  index.d.ts  index.js  package.json  test.mjs
.github/workflows/: CI.yml
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: currency.rs  finance.rs  general.rs  json.rs  lib.rs  retail.rs
src/finance/: card.rs  currency.rs
src/general/: json.rs  phonenumber.rs  postalcode.rs  uszipcode.rs
src/retail/: gtin.rs
